# vis.api.freifunk.net

./: .gitignore  20140310-to-20160621-ffSummarizedDir.csv  FreifunkVis-timeseries.R  FreifunkVis-wordclouds.R  FreifunkVis.R  README.md  docker-compose.yml  ffFunctions.R  index.html
.github/workflows/: rust.yml
docker-entrypoint-initdb.d/: mongo-init.js
graphql_server/: mongo_connector.js  package-lock.json  package.json  schema.js  server.js
graphql_server/mongodb_queries/: grouped_nodes_timeseries.js  latest_nodes_per_community.js  routing_protocols.js
json_adder/: Cargo.toml
json_adder/examples/: insert_many.rs  json_to_struct.rs  setup_db.rs
json_adder/python/: README.md  config.yaml  main.py  requirements.txt
json_adder/python/db/: __init__.py  setup_db.py
json_adder/python/models/: __init__.py  community.py
json_adder/python/scripts/: __init__.py  insert_data.py
json_adder/src/: main.rs  models.rs  setup_db.rs
old_code/: FreifunkVis-timeseries.R  FreifunkVis-wordclouds.R  FreifunkVis.R  ffFunctions.R
visualisations/: getData.js  index.html
visualisations/graphs/: graph1.js  graph2.js  graph3.js
