[package]
name = "json_adder"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Marshall"]
license = "GPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = {version = "1.32", features = ["full"]}
serde_json = "1"
chrono = "0.4"
bson = {version = "2.11", features = ["chrono-0_4"]}
anyhow = "1.0"
flate2 = "1.0.31"
tar = "0.4.41"

[dependencies.mongodb]
version = "2.8"
features = ["tokio-runtime"]

[[example]]
name = "json_to_struct"
path = "examples/json_to_struct.rs"

[profile.release]
lto = "fat"
